--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="enter_your_name_text_view">Enter yout name</string>
     <string name="enter_name_buton">Enter</string>
     <string name="calling_activity_message">The calling activity was</string>
+    <string name="get_the_name_text_view">Go Get the Name</string>
+    <string name="go_get_it_button_text">Go Get it</string>
+    <string name="user_name_sent_back">The Users Name Was</string>
 
 </resources>
